# CS432NOSQLProj

./: README.md
.devcontainer/: devcontainer.json
app/: Dockerfile  pyproject.toml
app/src/: data_retrieval.py  run.py
app/src/data/: 76ers.csv  bucks.csv  bulls.csv  cavs.csv  celtics.csv  clippers.csv  grizzlies.csv  hawks.csv  heat.csv  hornets.csv  jazz.csv  kings.csv  knicks.csv  lakers.csv  magic.csv  mavericks.csv  nets.csv  nuggets.csv  pacers.csv  pelicans.csv  pistons.csv  raptors.csv  rockets.csv  spurs.csv  suns.csv  thunder.csv  timberwolves.csv  trailblazers.csv  warriors.csv  wizards.csv
