[tool.poetry]
name = "nbateammatedb"
version = "0.1.0"
description = "App for building and analyzing teammates throughout NBA history"
authors = ["Ryan Geary"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.9"
neo4j = "^5.2.0"
numpy = "^1.23.4"
pandas = "^1.5.1"
sportsipy = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
